--- a/src/layouts/components/sections/CallToAction.astro
+++ b/src/layouts/components/sections/CallToAction.astro
@@ -29,8 +29,10 @@ let {
 
 {
   enable && (
-    <section class="cta-section mt-auto">
-      <div class="bg-accent py-14 md:py-28">
+    <section
+      class="cta-section section-light mt-auto"
+      style="background-image: var(--gradient-bg-light);">
+      <div class="py-14 md:py-28">
         <div class="container grid grid-cols-1 place-content-between gap-y-16 lg:grid-cols-2 lg:gap-x-10">
           <div
             class="space-y-7 lg:max-w-2xl"
@@ -38,7 +40,7 @@ let {
             data-aos-offset="0">
             {title && (
               <h2
-                class="section-title has-italic-text capitalize"
+                class="section-title has-italic-text text-monire-deep-teal capitalize"
                 set:html={markdownify(title)}
               />
             )}
@@ -46,10 +48,10 @@ let {
           <div class="flex flex-wrap-reverse items-center gap-x-20 gap-y-6 md:flex-nowrap lg:justify-end">
             {ctaBtn && ctaBtn.enable && (
               <div
-                class="after:sm:bg-primary/35 relative after:sm:absolute after:sm:top-0 after:sm:left-[120%] after:sm:h-full after:sm:w-px after:sm:rotate-18 after:sm:content-['']"
+                class="after:sm:bg-monire-deep-teal/25 relative after:sm:absolute after:sm:top-0 after:sm:left-[120%] after:sm:h-full after:sm:w-px after:sm:rotate-18 after:sm:content-['']"
                 data-aos="fade-right-sm">
                 <ButtonLink
-                  class="btn-md btn-primary group relative z-30 flex items-center gap-4"
+                  class="btn-md btn-pricing-light group relative z-30 flex items-center gap-4"
                   content={ctaBtn} />
               </div>
             )}
