--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -12,7 +12,8 @@
   --color-border-light: #242222;
   --color-theme-dark: #1A191C;
   --color-monire-teal: 0 59 75;
-  --color-monire-nav: 26 54 60;
+  --color-monire-nav: 3 56 68;
+  --color-monire-nav-active: 16 86 101;
   --color-monire-deep-teal: #0F4B5A;
   --color-monire-deep-teal-soft: #136175;
   --color-monire-deep-teal-focus: #2A7E94;
