--- a/src/layouts/components/sections/ContactSection.astro
+++ b/src/layouts/components/sections/ContactSection.astro
@@ -113,7 +113,7 @@ form = {
 
 {
   enable && (
-    <section class="relative">
+    <section class="section-light relative">
       {/*  <div class:list={["container"]}>
         <div
           class:list={[
