--- a/src/layouts/components/case-study/CaseStudyDescription.astro
+++ b/src/layouts/components/case-study/CaseStudyDescription.astro
@@ -5,7 +5,7 @@ const isAutomation = type === "automation";
 const isPortfolio = type === "portfolio";
 ---
 
-<div class="max-w-xl space-y-8 text-sm">
+<div class="text-monire-deep-teal max-w-xl space-y-8 text-sm">
   <!-- Portfolio → Show only description paragraph -->
   {
     isPortfolio && description && (
@@ -19,7 +19,7 @@ const isPortfolio = type === "portfolio";
   {
     isAutomation && before && (
       <div>
-        <h4 class="mb-1 font-semibold">Before:</h4>
+        <h4 class="text-monire-deep-teal mb-1 font-semibold">Before:</h4>
         <p class="whitespace-pre-line opacity-80">{before}</p>
       </div>
     )
@@ -28,7 +28,7 @@ const isPortfolio = type === "portfolio";
   {
     isAutomation && after && (
       <div>
-        <h4 class="mb-1 font-semibold">After:</h4>
+        <h4 class="text-monire-deep-teal mb-1 font-semibold">After:</h4>
         <p class="whitespace-pre-line opacity-80">{after}</p>
       </div>
     )
@@ -37,7 +37,7 @@ const isPortfolio = type === "portfolio";
   {
     isAutomation && impact && (
       <div>
-        <h4 class="mb-1 font-semibold">Impact:</h4>
+        <h4 class="text-monire-deep-teal mb-1 font-semibold">Impact:</h4>
         <p class="whitespace-pre-line opacity-80">{impact}</p>
       </div>
     )
