--- a/src/layouts/components/case-study/Hero.astro
+++ b/src/layouts/components/case-study/Hero.astro
@@ -4,12 +4,12 @@ const { title, category } = Astro.props;
 
 <div class="space-y-4">
   <span
-    class="flex items-center gap-2 text-sm font-medium tracking-wide text-green-600 uppercase">
-    <span class="h-2 w-2 rounded-full bg-green-500"></span>
+    class="flex items-center gap-2 text-sm font-medium tracking-wide text-monire-deep-teal uppercase">
+    <span class="bg-mustard h-2 w-2 rounded-full"></span>
     {category}
   </span>
 
-  <h1 class="max-w-xs text-[3rem] leading-tight font-semibold">
+  <h1 class="text-monire-deep-teal max-w-xs text-[3rem] leading-tight font-semibold">
     {title}
   </h1>
 </div>
