remove cta slash

--- a/src/layouts/components/sections/CallToAction.astro
+++ b/src/layouts/components/sections/CallToAction.astro
@@ -54,7 +54,7 @@ let {
           <div class="flex flex-wrap-reverse items-center gap-x-20 gap-y-6 md:flex-nowrap lg:justify-end">
             {ctaBtn && ctaBtn.enable && (
               <div
-                class="after:sm:bg-monire-deep-teal/25 relative after:sm:absolute after:sm:top-0 after:sm:left-[120%] after:sm:h-full after:sm:w-px after:sm:rotate-18 after:sm:content-['']"
+                class="relative"
                 data-aos="fade-right-sm">
                 <ButtonLink
                   class="btn-md btn-pricing-light group relative z-30 flex items-center gap-4"
