--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -64,7 +64,7 @@ let { title, subtitle, list } = actualContent as ourValueSectionType;
           <div
             data-aos="fade-up-sm"
             data-aos-delay="200"
-            class="grid justify-items-center gap-5 md:grid-cols-2 md:gap-6 lg:grid-cols-3">
+            class="grid justify-items-center gap-x-5 gap-y-7 md:grid-cols-2 md:gap-x-6 md:gap-y-9 lg:grid-cols-3">
             {list.map((item, index) => (
               <ValueCard
                 {...item}
